--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,20 @@
 Package: condition
-Title: What the Package Does (one line, title case)
+Title: Functions to Create and Check Condition Objects
 Version: 0.0-0
 Authors@R: person("Kirill", "Müller", role = c("aut", "cre"), email = "krlmlr+r@mailbox.org")
-Description: What the package does (one paragraph).
+Description: R has a condition system, but misses basic functions for creating
+    condition objects and checking inheritance. (No, structure() and inherits()
+    doesn't count.) The functions and classes in this package allow the simple
+    creation of custom condition objects and even the definition of own
+    condition class hierarchies.
 Imports: R6
 License: GPL-3
 LazyData: true
 Encoding: UTF-8
 Date: 2016-03-04
-URLNote: https://github.com/krlmlr/
-BugReports: https://github.com/krlmlr/
-URL: http://krlmlr.github.io/
+URLNote: https://github.com/krlmlr/condition
+BugReports: https://github.com/krlmlr/condition/issues
+URL: http://krlmlr.github.io/condition
 RoxygenNote: 5.0.1
 Collate:
     'oo.R'
