--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,8 @@ Description: R has a condition system, but misses basic functions for creating
     don't count.) The functions and classes in this package allow the simple
     creation of custom condition objects and even the definition of own
     condition class hierarchies.
-Imports: R6
+Imports:
+    R6
 License: GPL-3
 LazyData: true
 Encoding: UTF-8
@@ -20,7 +21,9 @@ Collate:
     'oo.R'
     'is.R'
     'new.R'
-Suggests: testthat,
+    'zzz-autoroxy.R'
+Suggests:
+    testthat,
     knitr,
     rmarkdown
 VignetteBuilder: knitr
